# orphanet-link

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  Makefile  README.md  container-release.json  mcp_server.py  pyproject.toml  server.py
.claude/skills/fastapi-route-change/: SKILL.md
.claude/skills/mcp-tool-change/: SKILL.md
.claude/skills/release-readiness/: SKILL.md
.github/actions/setup-uv-python/: action.yml
.github/workflows/: build-data.yml  ci.yml  conformance.yml  container-ci.yml  container-security.yml
docker/: Dockerfile  docker-compose.npm.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh
docs/: architecture.md  configuration.md  data.md  deployment.md
docs/router/: servers.yaml.snippet
docs/superpowers/plans/: 2026-06-18-orphanet-link.md
docs/superpowers/specs/: 2026-06-18-orphanet-link-design.md
orphanet_link/: __init__.py  app.py  buildinfo.py  config.py  constants.py  exceptions.py  identifiers.py  logging_config.py  server_manager.py
orphanet_link/data/: __init__.py  repository.py
orphanet_link/ingest/: __init__.py  builder.py  cli.py  download_security.py  downloader.py  lock.py  schema.py  schema.sql  specialties.py
orphanet_link/ingest/parsers/: __init__.py  _common.py  funct_consequences.py  product1.py  product3.py  product4.py  product6.py  product7.py  product9_ages.py  product9_prev.py
orphanet_link/mcp/: __init__.py  arg_help.py  capabilities.py  envelope.py  facade.py  metrics.py  middleware.py  next_commands.py  notfound_guard.py  resources.py  schemas.py  service_adapters.py  untrusted_content.py  untrusted_fencing.py
orphanet_link/mcp/tools/: __init__.py  _common.py  associations.py  batch.py  classification.py  discovery.py  diseases.py  xref.py
orphanet_link/services/: __init__.py  compose.py  data_resolver.py  orphanet_service.py  pagination.py  refresh.py  resolution.py  shaping.py  untrusted_text.py
scripts/: check_deployed_freshness.py  check_file_size.py  check_github_action_pins.py
tests/: conftest.py  test_dockerfile_bootstrap.py
tests/conformance/: behaviour.py  test_contract_truth_v1.py  test_health_transport.py  test_transport_mode.py
tests/fixtures/: en_funct_consequences.xml  en_product1.xml  en_product3_156.xml  en_product3_999.xml  en_product4.xml  en_product6.xml  en_product7.xml  en_product9_ages.xml  en_product9_prev.xml
tests/unit/: _envelope.py  _snapshot_utils.py  test_arg_help.py  test_batch_recovery.py  test_boundaries.py  test_builder.py  test_capabilities.py  test_cli.py  test_config.py  test_cors_credentials.py  test_data_resolver.py  test_determinism.py  test_docker_compose_loopback.py  test_docs_and_ci_contracts.py  test_docs_error_taxonomy.py  test_downloader.py  test_envelope_errors.py  test_error_code_closed_enum.py  test_error_taxonomy.py  test_host_origin_guard.py  test_identifiers.py  test_is_error_protocol_flag.py  test_loc_budget_exemption.py  test_meta_envelope.py  test_middleware.py  test_observability.py  test_output_schemas.py  test_pagination_invariants.py  test_parser_funct.py  test_parser_product1.py  test_parser_product3.py  test_parser_product4.py  test_parser_product6.py  test_parser_product7.py  test_parser_product9_ages.py  test_parser_product9_prev.py  test_production_init_sidecar.py  test_quick_wins.py  test_readme_tools.py  test_repository.py  (+14 more)
tests/unit/mcp/: test_error_leak_fencing.py  test_error_sanitation.py  test_notfound_guard.py  test_untrusted_content.py  test_untrusted_content_fencing.py
